# gsiot

./: DeviceManager.cpp
foobar-sample/src/: Makefile  Makefile.am  Makefile.in  algorithm.c  io.c  libusbi.h  linux_usbfs.c  main.c  main.c~  serial.c  socket.c  usbfunc.c
gloox/src/: .Makefile.swp  .main.cpp.swp  ControlBase.h~  GSIOTClient.cpp~  GSIOTClient.h~  GSIOTDevice.cpp~  GSIOTDevice.h~  GSIOTInfo.cpp~  GSIOTInfo.h~  Makefile  Makefile.am  Makefile.in  Makefile~  adhoc_example.cpp  adhoc_example.cpp~  adhoc_test.cpp~  embedded.cpp~  embedded.h~  main.cc~  main.cpp~  typedef.h~
gloox/src/libiot/: AddressManager.cpp  ControlBase.h  DeviceAddress.cpp  DeviceAddress.h  DeviceAddress.h~  EditAttrMgr.cpp~  EditAttrMgr.h~  GSIOTClient.cpp  GSIOTClient.h  GSIOTClient.h~  GSIOTDevice.cpp  GSIOTDevice.cpp~  GSIOTDevice.h~  GSIOTDeviceInfo.cpp  GSIOTDeviceInfo.h  GSIOTInfo.cpp~  GSIOTInfo.h  MediaControl.h~  ModbusProc.h  RFDevice.h  RFDeviceControl.h~  RFRemoteControl.cpp  RFRemoteControl.h~  RFSignalDefine.h  RS485DevControl.h  RS485DevControl.h~  RemoteButtonClass.h~  RemoteButtonManager.cpp  RemoteButtonManager.h~  RunCode.cpp  RunCode.h  RunCode.h~  SQLiteHelper.h~  SerialDataBuffer.cpp  SerialMessage.cpp  SerialMessage.h  SerialMessage.h~  common.cpp  common.cpp~  common.h  (+2 more)
gsarm/src/: APlayer.cpp  APlayer.h  AudioCap.h  AudioCap_File.h  AudioCap_G711.cpp  AudioCap_G711.h  AudioCfg.cpp  AudioCfg.h  AudioTestDefine.h  Audio_WAV2AAC.cpp  Audio_WAV2AAC.h  AutoCallEvent.h~  AutoEventthing.cpp~  AutoEventthing.h  AutoSendSMSEvent.cpp  AutoSendSMSEvent.cpp~  CameraControl.cpp  CameraFocal.cpp  CameraFocal.h  CameraPTZ.cpp  Column.cpp~  CommLink.cpp  CommLink.cpp~  CommLinkManager.cpp~  CommLinkManager.h  CommLinkManager.h~  ControlBase.h~  ControlEvent.cpp  ControlEvent.cpp~  ControlEvent.h~  ControlMessage.cpp  ControlMessage.cpp~  DBUpdate.cpp  DataStoreMgr.cpp  Database.cpp  DeviceAddress.cpp  DeviceAddress.cpp~  DeviceAddress.h  DeviceAddress.h~  DeviceConnection.cpp  (+120 more)
gsarm/src/.deps/: APlayer.Po  AudioCap.Po  AudioCapBase.Po  AudioCap_AAC.Po  AudioCap_File.Po  AudioCap_G711.Po  AudioCfg.Po  Audio_WAV2AAC.Po  AutoEventthing.Po  AutoNoticeEvent.Po  AutoSendSMSEvent.Po  CANDeviceControl.Po  CameraControl.Po  CameraFocal.Po  CameraPTZ.Po  CommLink.Po  CommLinkManager.Po  ControlMessage.Po  DBUpdate.Po  DataStoreMgr.Po  DeviceManager.Po  EditAttrMgr.Po  GSIOTClient.Po  GSIOTConfig.Po  GSIOTControl.Po  GSIOTDevice.Po  GSIOTDeviceInfo.Po  GSIOTEvent.Po  GSIOTHeartbeat.Po  GSIOTInfo.Po  GSIOTUser.Po  GSIOTUserMgr.Po  GSRemoteTalkMgr.Po  H264MediaFile.Po  H264NalReader.Po  HeartbeatMon.Po  IPCamConnection.Po  IPCameraBase.Po  IPCameraManager.Po  MediaControl.Po  (+37 more)
gsbox/src/: Makefile.am  Makefile.am~  Makefile.in  boardhandler.h  client.cpp  client.h  clientshandler.h  discoveryhandler.h  hardware.cpp  hardware.h  iotask.h  main.cc  main.cc~  netpacket.cpp  netpacket.h  obsolete.cpp  obsolete.cpp~  obsolete.h  packet.cpp  packet.cpp~  packet.h  packet.h~  radiohandler.h  radionetwork.cpp  radionetwork.h  radiopacket.cpp  radiopacket.h  radiosynchandler.cpp  radiosynchandler.h  radiotimerhandler.h  rs232.c  rs232.h  sockettask.h  task.h  taskmanager.cpp  taskmanager.cpp~  taskmanager.h  tcpserver.cpp  tcpserver.cpp~  tcpserver.h  (+7 more)
gsiot/src/: AddressManager.cpp  AddressManager.cpp~  AddressManager.h  AutoControlEvent.cpp  AutoControlEvent.cpp~  AutoControlEvent.h  AutoNoticeEvent.cpp~  AutoNoticeEvent.h  AutoNoticeEvent.h~  AutoSendSMSEvent.h  AutoSendSMSEvent.h~  CANDeviceControl.cpp  CANDeviceControl.cpp~  CANDeviceControl.h  Column.cpp  Column.cpp~  CommLink.cpp  CommLink.cpp~  CommLink.h  CommLink.h~  CommLinkManager.cpp  CommLinkManager.cpp~  CommLinkManager.h  ControlBase.h  ControlEvent.h  ControlMessage.h  ControlMessage.h~  DBUpdate.cpp~  DataStoreMgr.cpp  DataStoreMgr.cpp~  DataStoreMgr.h  DataStoreMgr.h~  Database.h  DeviceAddress.cpp  DeviceAddress.cpp~  DeviceAddress.h  DeviceConnection.cpp  DeviceConnection.cpp~  DeviceConnection.h  DeviceConnection.h~  (+142 more)
gsiot/src/.deps/: AddressManager.Po  AutoCallEvent.Po  AutoControlEvent.Po  Column.Po  ControlEvent.Po  Database.Po  DeviceAddress.Po  DeviceConnection.Po  GSIOTClient.Po  GSIOTControl.Po  GSIOTInfo.Po  HttpRequest.Po  IGSMessageHandler.Po  NetBaseClient.Po  NetMan.Po  NetTcpClient.Po  PresetManager.Po  RFDevice.Po  RemoteButtonManager.Po  SQLiteHelper.Po  SerialDataBuffer.Po  SerialMessage.Po  Statement.Po  TimerManager.Po  TriggerControl.Po  XmppGSAuth.Po  XmppGSEvent.Po  XmppGSManager.Po  XmppGSMessage.Po  XmppGSReport.Po  XmppGSResult.Po  XmppGSUpdate.Po  XmppGSVObj.Po  common.Po  gsiot.Po  rs232.Po
homecontrol/: .anjuta_sym_db.db  Makefile.am  Makefile.in  configure  configure.ac  radio.xml
homecontrol/.anjuta/session/: anjuta.session  dock-layout.xml
homecontrol/Debug/: Makefile  config.h  config.status
homecontrol/Debug/src/: Makefile  homecontrol
homecontrol/Debug/src/.deps/: client.Po  hardware.Po  main.Po  obsolete.Po  packet.Po  radionetwork.Po  rs232.Po  taskmanager.Po  (+2 more)
homecontrol/autom4te.cache/: output.0  traces.0
homecontrol/src/: Makefile  Makefile.am  Makefile.in  Makefile~  algorithm.c~  client.c  client.c~  client.h  client.h~  dataserver.c~  dataserver.h~  hardware.c  hardware.c~  hardware.h  hardware.h~  main.c  main.c~  obsolete.c~  obsolete.h  obsolete.h~  packet.c  packet.c~  packet.h  packet.h~  radionetwork.c  radionetwork.c~  radionetwork.h  radionetwork.h~  rs232.h~  taskmanager.c  taskmanager.c~  taskmanager.h  taskmanager.h~  tcpserver.c  tcpserver.c~  tcpserver.h  tcpserver.h~  transform.c~  transform.h~  typedef.h  (+4 more)
homecontrol/src/.deps/: client.Po  hardware.Po  main.Po  obsolete.Po  packet.Po  radionetwork.Po  rs232.Po  taskmanager.Po  tcpserver.Po  udpbroadcast.Po
lzai/src/: Crawler.cpp  Crawler.cpp~  Crawler.h  Crawler.h~  FetchUrl.cpp  FetchUrl.cpp~  FetchUrl.h  FetchUrlDlg.cpp  FetchUrlDlg.cpp~  FetchUrlDlg.h  FetchUrlDlg.h~  Makefile.am  Makefile.am~  Makefile.in  lzsql.cpp  lzsql.cpp~  lzsql.h  lzsql.h~  main.cc  main.cc~  resource.h  stdafx.cpp  stdafx.h  stdafx.h~
(+860 files in other folders)
