## Process this file with automake to produce Makefile.in

## Created by Anjuta

AM_CPPFLAGS = \
	-DPACKAGE_LOCALE_DIR=\""$(localedir)"\" \
	-DPACKAGE_SRC_DIR=\""$(srcdir)"\" \
	-DPACKAGE_DATA_DIR=\""$(pkgdatadir)"\"

AM_CFLAGS =\
	 -Wall\
	 -g

bin_PROGRAMS = gloox_cpp

gloox_cpp_SOURCES = \
	main.cc \
	adhoc_example.cpp \
	libiot/AddressManager.cpp \
	libiot/AddressManager.h \
	libiot/CommLink.cpp \
	libiot/CommLink.h \
	libiot/common.cpp \
	libiot/common.h \
	libiot/ControlBase.h \
	libiot/DeviceAddress.cpp \
	libiot/DeviceAddress.h \
	libiot/EditAttrMgr.cpp \
	libiot/EditAttrMgr.h \
	libiot/GSIOTClient.cpp \
	libiot/GSIOTClient.h \
	libiot/GSIOTDevice.cpp \
	libiot/GSIOTDevice.h \
	libiot/GSIOTDeviceInfo.cpp \
	libiot/GSIOTDeviceInfo.h \
	libiot/GSIOTInfo.cpp \
	libiot/GSIOTInfo.h \
	libiot/GSIOTObjBase.h \
	libiot/GSObjLocker.h \
	libiot/ISerialPortHandler.h \
	libiot/ModbusProc.cpp \
	libiot/ModbusProc.h \
	libiot/RemoteButtonClass.cpp \
	libiot/RemoteButtonClass.h \
	libiot/RemoteButtonManager.cpp \
	libiot/RemoteButtonManager.h \
	libiot/RFDevice.cpp \
	libiot/RFDevice.h \
	libiot/RFDeviceControl.cpp \
	libiot/RFDeviceControl.h \
	libiot/RFRemoteControl.cpp \
	libiot/RFRemoteControl.h \
	libiot/RFSignalDefine.cpp \
	libiot/RFSignalDefine.h \
	libiot/RS485DevControl.cpp \
	libiot/RS485DevControl.h \
	libiot/RunCode.cpp \
	libiot/RunCode.h \
	libiot/SerialDataBuffer.cpp \
	libiot/SerialDataBuffer.h \
	libiot/SerialMessage.cpp \
	libiot/SerialMessage.h \
	libiot/typedef.h

gloox_cpp_LDFLAGS = 

gloox_cpp_LDADD = 


