## Process this file with automake to produce Makefile.in

## Created by Anjuta

AM_CPPFLAGS = \
	-DPACKAGE_LOCALE_DIR=\""$(localedir)"\" \
	-DPACKAGE_SRC_DIR=\""$(srcdir)"\" \
	-DPACKAGE_DATA_DIR=\""$(pkgdatadir)"\"

AM_CFLAGS =\
	 -Wall\
	 -g

bin_PROGRAMS = gsarm

gsarm_SOURCES = \
	gsarm.cc \
	AddressManager.cpp \
	AddressManager.h \
	AutoCallEvent.cpp \
	AutoCallEvent.h \
	AutoControlEvent.cpp \
	AutoControlEvent.h \
	AutoEventthing.cpp \
	AutoEventthing.h \
	AutoNoticeEvent.cpp \
	AutoNoticeEvent.h \
	AutoSendSMSEvent.cpp \
	AutoSendSMSEvent.h \
	CANDeviceControl.cpp \
	CANDeviceControl.h \
	Column.cpp \
	Column.h \
	CommLink.cpp \
	CommLink.h \
	CommLinkManager.cpp \
	CommLinkManager.h \
	common.cpp \
	common.h \
	ControlBase.h \
	ControlEvent.cpp \
	ControlEvent.h \
	ControlMessage.cpp \
	ControlMessage.h \
	Database.cpp \
	Database.h \
	DataStoreMgr.cpp \
	DataStoreMgr.h \
	DBUpdate.cpp \
	DBUpdate.h \
	DeviceAddress.cpp \
	DeviceAddress.h \
	DeviceConnection.cpp \
	DeviceConnection.h \
	DeviceManager.cpp \
	DeviceManager.h \
	EditAttrMgr.cpp \
	EditAttrMgr.h \
	Exception.h \
	GSIOTClient.cpp \
	GSIOTClient.h \
	GSIOTConfig.cpp \
	GSIOTConfig.h \
	GSIOTControl.cpp \
	GSIOTControl.h \
	GSIOTDevice.cpp \
	GSIOTDevice.h \
	GSIOTDeviceInfo.cpp \
	GSIOTDeviceInfo.h \
	GSIOTEvent.cpp \
	GSIOTEvent.h \
	GSIOTHeartbeat.cpp \
	GSIOTHeartbeat.h \
	GSIOTInfo.cpp \
	GSIOTInfo.h \
	GSIOTObjBase.h \
	GSIOTUser.cpp \
	GSIOTUser.h \
	GSIOTUserMgr.cpp \
	GSIOTUserMgr.h \
	GSObjLocker.h \
	HeartbeatMon.cpp \
	HeartbeatMon.h \
	ICANDeviceHandler.h \
	IDeviceHandler.h \
	IGSMessageHandler.cpp \
	IGSMessageHandler.h \
	IRFDeviceHandler.h \
	IRFReadHandler.h \
	ISerialPortHandler.h \
	ITimerHandler.h \
	Makefile.am \
	memmacro.h \
	ModbusProc.cpp \
	ModbusProc.h \
	NetBaseClient.cpp \
	NetBaseClient.h \
	NetMan.cpp \
	NetMan.h \
	NetModule.cpp \
	NetModule.h \
	NetTcpClient.cpp \
	NetTcpClient.h \
	NetUdpClient.cpp \
	NetUdpClient.h \
	PresetManager.cpp \
	PresetManager.h \
	RemoteButtonClass.cpp \
	RemoteButtonClass.h \
	RemoteButtonManager.cpp \
	RemoteButtonManager.h \
	RFDevice.cpp \
	RFDevice.h \
	RFDeviceControl.cpp \
	RFDeviceControl.h \
	RFRemoteControl.cpp \
	RFRemoteControl.h \
	RFSignalDefine.cpp \
	RFSignalDefine.h \
	rs232.cpp \
	rs232.h \
	RS485DevControl.cpp \
	RS485DevControl.h \
	RunCode.cpp \
	RunCode.h \
	SerialDataBuffer.cpp \
	SerialDataBuffer.h \
	SerialMessage.cpp \
	SerialMessage.h \
	SQLiteC++.h \
	SQLiteHelper.cpp \
	SQLiteHelper.h \
	Statement.cpp \
	Statement.h \
	TimerManager.cpp \
	TimerManager.h \
	Transaction.cpp \
	Transaction.h \
	TriggerControl.cpp \
	TriggerControl.h \
	typedef.h \
	VObjClass.cpp \
	VObjClass.h \
	XmppGSAuth.cpp \
	XmppGSAuth.h \
	XmppGSChange.cpp \
	XmppGSChange.h \
	XmppGSEvent.cpp \
	XmppGSEvent.h \
	XmppGSManager.cpp \
	XmppGSManager.h \
	XmppGSMessage.cpp \
	XmppGSMessage.h \
	XmppGSPlayback.cpp \
	XmppGSPlayback.h \
	XmppGSPreset.cpp \
	XmppGSPreset.h \
	XmppGSRelation.cpp \
	XmppGSRelation.h \
	XmppGSReport.cpp \
	XmppGSReport.h \
	XmppGSResult.cpp \
	XmppGSResult.h \
	XmppGSState.cpp \
	XmppGSState.h \
	XmppGSTalk.cpp \
	XmppGSTalk.h \
	XmppGSUpdate.cpp \
	XmppGSUpdate.h \
	XmppGSVObj.cpp \
	XmppGSVObj.h \
	XmppRegister.cpp \
	XmppRegister.h

gsarm_LDFLAGS = 

gsarm_LDADD = \
	-lgloox \
	-lpthread \
	-lsqlite3
	


