## Process this file with automake to produce Makefile.in

## Created by Anjuta

AM_CPPFLAGS = \
	-DPACKAGE_LOCALE_DIR=\""$(localedir)"\" \
	-DPACKAGE_SRC_DIR=\""$(srcdir). \
	$(SQLITE3_CFLAGS)"\" \
	-DPACKAGE_DATA_DIR=\""$(pkgdatadir)"\"

AM_CFLAGS =\
	 -Wall\
	 -g

bin_PROGRAMS = gsiot \
	gsiot

gsiot_SOURCES = \
	AddressManager.cpp \
	AddressManager.h \
	common.cpp \
	common.h \
	ControlBase.h \
	DeviceAddress.cpp \
	DeviceAddress.h \
	EditAttrMgr.cpp \
	EditAttrMgr.h \
	GSIOTClient.cpp \
	GSIOTClient.h \
	GSIOTControl.cpp \
	GSIOTControl.h \
	GSIOTDevice.cpp \
	GSIOTDevice.h \
	GSIOTDeviceInfo.cpp \
	GSIOTDeviceInfo.h \
	GSIOTInfo.cpp \
	GSIOTInfo.h \
	GSIOTObjBase.h \
	GSObjLocker.h \
	typedef.h \
	XmppGSResult.cpp \
	XmppGSResult.h \
	gsiot.cc \
	Makefile.am \
	SQLiteHelper.cpp \
	SQLiteHelper.h \
	SQLiteC++.h \
	Column.cpp \
	Column.h \
	Database.cpp \
	Database.h \
	Exception.h \
	Statement.cpp \
	Statement.h \
	Transaction.cpp \
	Transaction.h \
	GSIOTConfig.cpp \
	GSIOTConfig.h \
	DBUpdate.cpp \
	DBUpdate.h \
	GSIOTUser.cpp \
	GSIOTUser.h \
	GSIOTUserMgr.cpp \
	GSIOTUserMgr.h \
	XmppGSAuth.cpp \
	XmppGSAuth.h \
	XmppGSMessage.cpp \
	XmppGSMessage.h \
	DataStoreMgr.cpp \
	DataStoreMgr.h \
	RunCode.cpp \
	RunCode.h \
	GSIOTHeartbeat.cpp \
	GSIOTHeartbeat.h \
	XmppGSState.cpp \
	XmppGSState.h \
	XmppGSManager.cpp \
	XmppGSManager.h \
	DeviceConnection.cpp \
	DeviceConnection.h \
	TriggerControl.cpp \
	TriggerControl.h \
	ControlEvent.cpp \
	ControlEvent.h \
	IDeviceHandler.h \
	ICANDeviceHandler.h \
	IDeviceHandler.h \
	IGSMessageHandler.cpp \
	IGSMessageHandler.h \
	IRFReadHandler.h \
	ISerialPortHandler.h \
	ITimerHandler.h \
	CANDeviceControl.cpp \
	CANDeviceControl.h \
	DeviceManager.cpp \
	DeviceManager.h \
	PresetManager.cpp \
	PresetManager.h \
	CommLinkManager.cpp \
	CommLinkManager.h \
	rs232.cpp \
	rs232.h

gsiot_LDFLAGS = 

gsiot_LDADD = \
	-lgloox \
	-lpthread \
	-lsqlite3


